SUBDIRS= adiru ahrs_discovery aocs aram ardupilot arinc653_annex asl behavior_annex	\
	  car data_modeling_annex fcs flow_analysis fms isr		\
	  line_follower mixin memory mosart multicore		\
	  pathfinder_system perseus producer_consumer ravenscar radar	\
	  rap redundancy rma robot round_robin time_triggered units	\
	  uxv voter satellite
#mjpeg

EXTRA_DIST=$(srcdir)/Makefile.common

clean-local:
	-rm -rf *~
