SUBDIRS= adiru ahrs_discovery aocs aram ardupilot arinc653_annex asl	\
	  behavior_annex car data_modeling_annex fcs flow_analysis fms	\
	  isr line_follower mixin memory mosart multicore paparazzi	\
	  pathfinder_system perseus producer_consumer ravenscar radar	\
	  rap rap_code redundancy rma robot round_robin time_triggered	\
	  units uxv voter satellite stm32discovery_ada robot_ba		\
	  pacemaker doors rosace mjpeg crazyflie

EXTRA_DIST=$(srcdir)/Makefile.common

clean-local:
	-rm -rf *~
