AADL_SOURCES = $(srcdir)/model.aadl
AADL_ROOT    = adiru.impl

OTHER_FILES = $(srcdir)/acc_code.c $(srcdir)/adiru_processor.aadl	\
   $(srcdir)/model.aadl $(srcdir)/receive.c				\
   $(srcdir)/shm_datatype.aadl $(srcdir)/threads.aadl			\
   $(srcdir)/adiru_memory.aadl $(srcdir)/adirup_code.c			\
   $(srcdir)/partitions.aadl shm_code.c $(srcdir)/subprograms.aadl

CLEANDIRS =
CLEANFILES =

include $(srcdir)/../Makefile.common

AVAILABLE_TARGETS= parse-aadl
