AADL_SOURCES=					\
	$(srcdir)/ba_example1.aadl		\
	$(srcdir)/ba_example2.aadl		\
	$(srcdir)/ba_example3.aadl		\
	$(srcdir)/ba_example4.aadl		\
	$(srcdir)/ba_example5.aadl		\
	$(srcdir)/ba_example6.aadl
#	$(srcdir)/ba_example7.aadl

include $(srcdir)/../Makefile.common

AVAILABLE_TARGETS= parse-aadl
