AADL_SOURCES =  $(srcdir)/crazyflie_system.aadl

AADL_ROOT    = crazyflie_system::crazyflie_system.impl

OTHER_FILES = $(srcdir)/crazyflie_errors.aadl				\
	$(srcdir)/crazyflie_software.aadl				\
	$(srcdir)/crazyflie_final.aadl $(srcdir)/crazyflie_system.aadl	\
	$(srcdir)/crazyflie_functional.aadl				\
	$(srcdir)/crazyflie_types.aadl					\
	$(srcdir)/crazyflie_hardware.aadl


CLEANDIRS =
CLEANFILES =

include $(srcdir)/../Makefile.common

AVAILABLE_TARGETS= parse-aadl cheddar run_cheddar

