AADL_SOURCES = $(srcdir)/fms.aadl
AADL_ROOT    = fms.impl

OTHER_FILES = $(srcdir)/afdx_properties.aadl $(srcdir)/fms.aadl	\
     $(srcdir)/m1_software.aadl $(srcdir)/m4_software.aadl	\
     $(srcdir)/subsystem.aadl $(srcdir)/datatype.aadl		\
     $(srcdir)/fms_hardware.aadl $(srcdir)/m3_software.aadl	\
     $(srcdir)/m2_software.aadl

CLEANDIRS =
CLEANFILES =

include $(srcdir)/../Makefile.common

AVAILABLE_TARGETS= parse-aadl
