AADL_SOURCES = $(srcdir)/paparazzi_system.aadl
AADL_ROOT    =

OTHER_FILES = $(srcdir)/flybywire_hard.aadl				\
	$(srcdir)/paparazzi_hard.aadl $(srcdir)/autopilot_hard.aadl	\
	$(srcdir)/flybywire_soft.aadl $(srcdir)/autopilot_soft.aadl	\
	$(srcdir)/flybywire_subsys.aadl					\
	$(srcdir)/paparazzi_subprograms.aadl				\
	$(srcdir)/autopilot_subsys.aadl $(srcdir)/papa_types.aadl

CLEANDIRS =
CLEANFILES =

include $(srcdir)/../Makefile.common

AVAILABLE_TARGETS= parse-aadl
