AADL_SOURCES = $(srcdir)/mars_pathfinder.aadl
AADL_ROOT    = sys_mars_pathfinder.impl

OTHER_FILES =					\
	$(srcdir)/pathfinder_software.aadl \
	$(srcdir)/pathfinder_hardware.aadl

CLEANDIRS =
CLEANFILES =

include $(srcdir)/../Makefile.common

AVAILABLE_TARGETS= parse-aadl real cheddar mast aadl_xml
