AADL_SOURCES = $(srcdir)/ravenscar_example.aadl
AADL_ROOT    = case_study.leon_local

OTHER_FILES =					\
	$(srcdir)/auxiliary.adb			\
	$(srcdir)/auxiliary.ads			\
	$(srcdir)/events.adb			\
	$(srcdir)/events.ads			\
	$(srcdir)/event_source.adb		\
	$(srcdir)/event_source.ads		\
	$(srcdir)/logs.adb			\
	$(srcdir)/logs.ads			\
	$(srcdir)/production_workload.adb	\
	$(srcdir)/production_workload.ads	\
	$(srcdir)/work.adb			\
	$(srcdir)/work.ads

CLEANDIRS = case_study_leon_local

include $(srcdir)/../Makefile.common

AVAILABLE_TARGETS = parse-aadl real ada
