AADL_SOURCES = $(srcdir)/rma.aadl
AADL_ROOT    = rma.impl

OTHER_FILES = $(srcdir)/hello.c

CLEANDIRS = rma_impl
CLEANFILES = rma_impl_aadl_xml.xml

include $(srcdir)/../Makefile.common

AVAILABLE_TARGETS= parse-aadl real cheddar mast aadl_xml build_ada	\
	build_c petri bound-t alloy stats subprograms
