SUBDIRS = emaxxv2				\
	minirocket				\
	quadrirotorv0				\
	quadrirotorv1				\
	traxsterv3

include $(srcdir)/../Makefile.common

OTHER_FILES=						\
	$(srcdir)/common/battery_14v_4ah.aadl		\
	$(srcdir)/common/battery_7v2_4a5h.aadl		\
	$(srcdir)/common/camera_nc353l.aadl		\
	$(srcdir)/common/camera_usb.aadl		\
	$(srcdir)/common/compass_hmc6352.aadl		\
	$(srcdir)/common/gps_lea4h.aadl			\
	$(srcdir)/common/inertial_chr6d.aadl		\
	$(srcdir)/common/inertial_gps_ig500n.aadl	\
	$(srcdir)/common/motor_bl2824.aadl		\
	$(srcdir)/common/motor_hg37d.aadl		\
	$(srcdir)/common/motor_ig52.aadl		\
	$(srcdir)/common/motor_tm550.aadl		\
	$(srcdir)/common/odometer_refx.aadl		\
	$(srcdir)/common/pressure_hca0811.aadl		\
	$(srcdir)/common/receiver_smc16.aadl		\
	$(srcdir)/common/regulator_reg113_33.aadl	\
	$(srcdir)/common/regulator_ten40_4812.aadl	\
	$(srcdir)/common/regulator_tsi10n.aadl		\
	$(srcdir)/common/router_wifi_refxx.aadl		\
	$(srcdir)/common/router_wifi_wndr3300.aadl	\
	$(srcdir)/common/telemeter_urg04lx.aadl		\
	$(srcdir)/common/telemeter_utm30lx.aadl		\
	$(srcdir)/common/types.aadl			\
	$(srcdir)/common/ultrasound_sfr08.aadl		\
	$(srcdir)/common/variator_blctlv12.aadl		\
	$(srcdir)/common/variator_evx.aadl

