REAL_SOURCES=					\
	$(srcdir)/aadl_theorems.real		\
	$(srcdir)/arinc653_theorems.real	\
	$(srcdir)/bare_board_theorems.real	\
	$(srcdir)/data_model_theorems.real	\
	$(srcdir)/flow_latency.real		\
	$(srcdir)/memory_theorems.real		\
	$(srcdir)/ravenscar_theorems.real	\
	$(srcdir)/rma_theorems.real

EXTRA_DIST= $(REAL_SOURCES)

clean-local:
	-rm *~
